@@ -1,6 +1,6 @@
 -Added menu option to detect duplicates in the database.
 -Ported missing import file formats from 1.x: SuperMemo7 text, SuperMemo from
- Palm.
+ Palm, Cuecard WCU.
 -Double-clicking on a saved set in 'Activate cards' now automatically selects
  the set and closes the window (requested by Michael Campbell).
 -In 'edit cards', make more robust of no longer warning about discarding
@@ -8,6 +8,8 @@
 -Changing card types and deleting cards from the card browser is now faster.
 -Fix harmless error message when converting to Cloze cards in the card browser
  (reported my Michael Campbell).
+-Upgraded to lastest version of Qt/PyQt.
+
 
 Mnemosyne 2.1 : 2012-09-10
 
